# asteroid-health

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
i18n/: README.md  asteroid-health.de.ts  asteroid-health.en.ts
src/: main.qml
src/heartrate/: HeartrateDetailPage.qml  HeartratePreview.qml
src/settings/: LoggerSettingsPage.qml  RootSettingsPage.qml  UiSettingsPage.qml
src/stepCounter/: StepCounterPreview.qml  StepsDetailPage.qml
src/weight/: WeightDetailPage.qml  WeightPreview.qml
